refact: change routes and add README
