# internal/delivery/http/handlers/coin/addCoin/dto.go
@@ -1,10 +1,25 @@
 package addCoin
 
+import (
+	"crypto-price-service/internal/models"
+	"time"
+)
+
 type Request struct {
 	Name   string `json:"name" binding:"required"`
 	Symbol string `json:"symbol" binding:"required"`
 }
 
 type SuccessResponse struct {
-	Message string `json:"message"`
+	Symbol    string    `json:"symbol"`
+	Name      string    `json:"name"`
+	CreatedAt time.Time `json:"createdAt"`
+}
+
+func responseFromModel(coin models.Coin) SuccessResponse {
+	return SuccessResponse{
+		Symbol:    coin.Symbol,
+		Name:      coin.Name,
+		CreatedAt: coin.CreatedAt,
+	}
 }
