# internal/delivery/http/handlers/coin/addCoin/handler.go
@@ -2,7 +2,6 @@ package addCoin
 
 import (
 	_ "crypto-price-service/internal/delivery/http/dto"
-	apperrors "crypto-price-service/internal/errors"
 	"crypto-price-service/internal/models"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -18,19 +17,20 @@ func New(coins Coins) *Handler {
 }
 
 // AddCoin godoc
-// @Summary Add coin to watchlist
-// @Tags Coins
-// @Accept json
-// @Produce json
-// @Param request body Request true "Add coin request"
-// @Success 201 "No content (only status)"
-// @Failure      400 {object} dto.ErrorResponse "Input error"
-// @Failure      500 {object} dto.ErrorResponse "Internal error"
-// @Router /currency/add [post]
+// @Summary      Add a coin to the watchlist
+// @Description  Adds a new coin to the watchlist and returns the created coin
+// @Tags         Coins
+// @Accept       json
+// @Produce      json
+// @Param        request  body     Request  true  "Add coin request"
+// @Success      201 {object} SuccessResponse "Created coin object"
+// @Failure      400 {object} dto.ErrorResponse "Invalid request"
+// @Failure      500 {object} dto.ErrorResponse "Internal server error"
+// @Router       /coins [post]
 func (h *Handler) Handle(c *gin.Context) {
 	var req Request
 	if err := c.ShouldBindJSON(&req); err != nil {
-		_ = c.Error(apperrors.NewInvalidRequest().Wrap(err))
+		_ = c.Error(err)
 		return
 	}
 
@@ -40,5 +40,5 @@ func (h *Handler) Handle(c *gin.Context) {
 		return
 	}
 
-	c.Status(http.StatusCreated)
+	c.JSON(http.StatusCreated, responseFromModel(*coin))
 }
